--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-arxiv==1.4.8
-gradio==4.18.0
+arxiv>=1.4.8
+gradio>=4.18.0
 langchain==0.1.6
 langchain_community==0.0.19
 langchain_core==0.1.22
 langchain_openai==0.0.5
-openai==1.12.0
+openai>=1.12.0
 pydantic==2.6.1
 python-dotenv==1.0.1
 Requests==2.31.0
