--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
-arxiv>=1.4.8
-gradio>=4.18.0
-langchain==0.1.6
-langchain_community==0.0.19
-langchain_core==0.1.22
-langchain_openai==0.0.5
-openai>=1.12.0
-pydantic==2.6.1
+arxiv==1.4.8
+beautifulsoup4==4.12.3
+fake_useragent==1.4.0
+gradio==4.19.2
+gradio_modal==0.0.2
+langchain==0.1.9
+langchain_community==0.0.24
+langchain_core==0.1.27
+langchain_openai==0.0.7
+matplotlib==3.8.0
+openai==1.12.0
+pdfplumber==0.10.4
+pydantic==2.6.2
 python-dotenv==1.0.1
+regex==2023.12.25
 Requests==2.31.0
-typing_extensions==4.9.0
+scholarly==1.7.11
+scikit_learn==1.4.1.post1
+transformers==4.38.1
+websockets==10.4
 zhipuai==2.0.1
