--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,28 @@
 arxiv==1.4.8
 beautifulsoup4==4.12.3
+cachetools==5.3.2
 fake_useragent==1.4.0
 gradio==4.19.2
 gradio_modal==0.0.2
-langchain==0.1.9
-langchain_community==0.0.24
-langchain_core==0.1.27
-langchain_openai==0.0.7
+gradio_pdf==0.0.5
+httpx==0.27.0
+langchain==0.1.10
+langchain_community==0.0.25
+langchain_core==0.1.28
+langchain_openai==0.0.8
 matplotlib==3.8.0
-openai==1.12.0
+openai==1.13.3
+pdf2image==1.17.0
 pdfplumber==0.10.4
-pydantic==2.6.2
+pydantic==2.6.3
+PyJWT==2.8.0
+PyJWT==2.8.0
 python-dotenv==1.0.1
 regex==2023.12.25
 Requests==2.31.0
 scholarly==1.7.11
 scikit_learn==1.4.1.post1
 transformers==4.38.1
+typing_extensions==4.10.0
 websockets==10.4
 zhipuai==2.0.1
