--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-OPENAI_API_KEY = 
+OPENAI_API_KEY = "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"
 ZHIPUAI_API_KEY = 
 # ZHIPUAI_BASE_URL = 
 
