Changes to be committed: 	modified:   .env.template

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-OPENAI_API_KEY = "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"
+OPENAI_API_KEY = 
 ZHIPUAI_API_KEY = 
 # ZHIPUAI_BASE_URL = 
 
