--- a/requirements.txt
+++ b/requirements.txt
@@ -28,4 +28,4 @@ websockets==10.4
 zhipuai==2.0.1
 chromadb
 pypdf
-git+https://github.com/wenet-e2e/wenet.git
+# git+https://github.com/wenet-e2e/wenet.git
