--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,7 @@ arxiv==1.4.8
 beautifulsoup4==4.12.3
 cachetools==5.3.2
 fake_useragent==1.4.0
-gradio==4.19.2
-gradio_modal==0.0.2
-gradio_pdf==0.0.5
+gradio==4.21.0
 httpx==0.27.0
 langchain==0.1.10
 langchain_community==0.0.25
@@ -28,4 +26,4 @@ websockets==10.4
 zhipuai==2.0.1
 chromadb
 pypdf
-# git+https://github.com/wenet-e2e/wenet.git
+git+https://github.com/wenet-e2e/wenet.git
