modified:   app.py 	modified:   document_qa.py 	modified:   requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,27 @@
 arxiv==1.4.8
 beautifulsoup4==4.12.3
 cachetools==5.3.2
+chromadb==0.4.22
 fake_useragent==1.4.0
-gradio==4.21.0
+gradio==4.22.0
+gradio_modal==0.0.2
+grpcio==1.60.1
 httpx==0.27.0
-langchain==0.1.10
-langchain_community==0.0.25
-langchain_core==0.1.28
-langchain_openai==0.0.8
-matplotlib==3.8.0
-openai==1.13.3
-pdf2image==1.17.0
+langchain==0.1.13
+langchain_community==0.0.29
+langchain_core==0.1.33
+langchain_openai==0.1.1
+langchain_text_splitters==0.0.1
+librosa==0.10.1
+openai==1.14.2
+paddlespeech==1.4.1
 pdfplumber==0.10.4
-pydantic==2.6.3
+pydantic==2.6.4
 PyJWT==2.8.0
-PyJWT==2.8.0
+pypdf==4.1.0
 python-dotenv==1.0.1
-regex==2023.12.25
 Requests==2.31.0
 scholarly==1.7.11
-scikit_learn==1.4.1.post1
-transformers==4.38.1
 typing_extensions==4.10.0
 websockets==10.4
 zhipuai==2.0.1
-chromadb
-pypdf
-# git+https://github.com/wenet-e2e/wenet.git
