--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 arxiv==1.4.8
+BCEmbedding==0.1.3
 beautifulsoup4==4.12.3
 cachetools==5.3.2
 chromadb==0.4.22
@@ -7,6 +8,7 @@ gradio==4.22.0
 gradio_modal==0.0.2
 grpcio==1.60.1
 httpx==0.27.0
+huggingface_hub==0.20.2
 langchain==0.1.13
 langchain_community==0.0.29
 langchain_core==0.1.33
@@ -14,7 +16,7 @@ langchain_openai==0.1.1
 langchain_text_splitters==0.0.1
 librosa==0.10.1
 openai==1.14.2
-paddlespeech==1.4.1
+pathvalidate==3.2.0
 pdfplumber==0.10.4
 pydantic==2.6.4
 PyJWT==2.8.0
