--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ beautifulsoup4==4.12.3
 cachetools==5.3.2
 chromadb==0.4.22
 fake_useragent==1.4.0
-gradio==4.22.0
+gradio==4.21.0
 gradio_modal==0.0.2
 grpcio==1.60.1
 httpx==0.27.0
@@ -27,4 +27,6 @@ scholarly==1.7.11
 typing_extensions==4.10.0
 websockets==10.4
 zhipuai==2.0.1
+uvicorn==0.20.0
+fastapi==0.103.0
 git+https://github.com/wenet-e2e/wenet.git
